compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__type_alias__conflict_with_import.snap
---
source: compiler-core/src/type_/tests/type_alias.rs
expression: "import wibble.{type Wobble} type Wobble = Int"
---
----- SOURCE CODE
import wibble.{type Wobble} type Wobble = Int

----- ERROR
error: Duplicate type definition
  ┌─ /src/one/two.gleam:1:16
  │
1 │ import wibble.{type Wobble} type Wobble = Int
  │                ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^ Redefined here
  │                │             
  │                First defined here

The type `Wobble` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
