compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__type_alias__type_alias_error_does_not_stop_analysis.snap
---
source: compiler-core/src/type_/tests/type_alias.rs
expression: "\ntype UnusedParameter(a) =\n  Int\n\ntype UnknownType =\n  Dunno\n"
---
----- SOURCE CODE

type UnusedParameter(a) =
  Int

type UnknownType =
  Dunno


----- ERROR
error: Unused type parameter
  ┌─ /src/one/two.gleam:2:1
  │  
2 │ ╭ type UnusedParameter(a) =
3 │ │   Int
  │ ╰─────^

The type variable `a` is unused. It can be safely removed.

error: Unknown type
  ┌─ /src/one/two.gleam:6:3
  │
6 │   Dunno
  │   ^^^^^

The type `Dunno` is not defined or imported in this module.
