compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__type_alias__unused_parameter.snap
---
source: compiler-core/src/type_/tests/type_alias.rs
expression: "\ntype A(a) =\n  Int\n"
---
----- SOURCE CODE

type A(a) =
  Int


----- ERROR
error: Unused type parameter
  ┌─ /src/one/two.gleam:2:1
  │  
2 │ ╭ type A(a) =
3 │ │   Int
  │ ╰─────^

The type variable `a` is unused. It can be safely removed.
